# Project-Airframe

./: BOM_PartType-Smartwatch.xlsx  Hardware-Smartwatch.PrjPcbStructure  Mappe1.xlsx  Prototype1.3mf  Prototype1.SchDoc  README.md  Unbenannt-8.cpp  idkidkidk.cpp
.VSCodeCounter/2023-05-06_21-02-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-05-17_12-58-32/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Code/Embedded Code/: CMakeLists.txt  Embedded Code.sln  Sensors.h  Wireless.h  main.cpp
Code/Embedded Code/Embedded Code/: Embedded Code.vcxproj  Main.cpp
Data-Sheets/: Mappe1.xlsx
Data-Sheets-Excels/: Data.xlsx  Mappe1.xlsx
Fabrication/: Bottom-Contacts.stl  Bottom.step  Bottom.stl  Holder.stl  Lower.step  Middle.stl  Smartwatch-Ring.step  Top.stl
Hardware/: 0_Airframe-Overview.SchDoc  1_Airframe-Power_1.SchDoc  2_Airframe-Power_2.SchDoc  3_Airframe-Memory_1.SchDoc  5_Airframe-NXP_i.MX7_Power.SchDoc  6_Airframe-NXP_i.MX7.SchDoc  7_Airframe-Sensors.SchDoc  8_Airframe-Misc.SchDoc  9_Airframe-Wireless.SchDoc  Connection_Test - Kopie.mtl  Hardware-Smartwatch.BomDoc  Hardware2_Smartwatch.BomDoc  Hardware2_Smartwatch.PrjPcb  Hardware2_Smartwatch.PrjPcbStructure  PCB2.mtl  Power_Test.mtl  Prototype1.mtl  missing_components.3mf
Modell Versions/: Hardware_Prototype2.1.mtl  Hardware_Prototype2.mtl  Prototype2 v14.3mf
__Previews/: Prototype2.SchDocPreview  Sheet1.SchDocPreview  Smartwatch_Schematics.SchDocPreview
(+187 files in other folders)
